Add cells deletion

--- a/Whishmas/View/Base.lproj/Main.storyboard
+++ b/Whishmas/View/Base.lproj/Main.storyboard
@@ -109,6 +109,7 @@
                                 </prototypes>
                                 <connections>
                                     <outlet property="dataSource" destination="zzv-Mb-jI6" id="eCl-oF-7Jh"/>
+                                    <outlet property="delegate" destination="zzv-Mb-jI6" id="U5h-kr-VcR"/>
                                 </connections>
                             </tableView>
                         </subviews>
